# gazebo_crp450

./: .gitignore  CMakeLists.txt  gazebo_px4_setup.bash  package.xml
PX4-Autopilot/: package.xml
PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/airframes/: 10016_iris  8329_Crp450  CMakeLists.txt
PX4-Autopilot/src/modules/simulation/simulator_mavlink/: sitl_targets_gazebo.cmake
config/: arm_pid.cfg  arm_pid.yaml  rqt_multiplot.xml
launch/: Arm_pid.launch  Crp450_sitl.launch  posix_sitl.launch
models/Crp450/: Crp450.sdf  Crp450.sdf.bak  model.config
models/Crp450/meshes/: Arm1.STL  Arm2.STL  Arm_base.STL  BL_blade.STL  BR_blade.STL  FL_blade.STL  FR_blade.STL  bat.STL
models/debug_pole/: debug_pole.sdf  model.config
plugins/: joint_plugin.cc
rviz/: rviz.rviz
scripts/: arm_pid_cmd.py  params_calculate.py
src/: dynamic_param.cpp  fly_demo.cpp  gazebo_tools_init.cpp
src/PID_controller/: PID_controller.cpp  PID_controller.h
src/joint_controller_gazebo/: joint_controller.cpp  joint_controller.h
worlds/: Crp450.world
